--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,7 +3,7 @@
 github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]github: #替换为多达4个github赞助商启用的用户名，例如，[user1, user2]
 patreon: # Replace with a single Patreon usernamepatreon: #替换为单个patreon用户名
 open_collective: # Replace with a single Open Collective usernameopen_collective: #替换为单个Open Collective用户名
-ko_fi:Ko-fi.com/wuyangcui # Replace with a single Ko-fi usernameko_fi: #替换为单个Ko-fi用户名
+ko_fi: wuyangcui # Replace with a single Ko-fi usernameko_fi: #替换为单个Ko-fi用户名
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel#替换为一个单独的tidelift平台名称/包名称，例如：npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundrycommunity_bridge: #替换为一个单独的社区桥项目名称，例如cloud-foundry
 liberapay: # Replace with a single Liberapay usernameliberapay: #替换为单个liberapay用户名
